# CapstoneQWIM

./: CVaR Portfolio Optimization.ipynb  Fatma_Soliman_5.ipynb  Fatma_Soliman_MVO.ipynb  Fatma_Soliman_MVO_.ipynb  Fatma_Soliman_MVO_Final_.ipynb  Final_Metrics_Table_.csv  MVO_Cumulative_Returns_.csv  MVO_Final_Metrics_Table_.csv  MVO_Gamma_Sweep_Returns.csv  MVO_Prices_.csv  MVO_Variance_Concentration.csv  README.md  app.py  cumulative_returns (1).csv  cumulative_returns.csv  cumulative_returns_.csv  dashboard_app.py  final_metrics_table.csv  mvo_model_comparison_table.csv  prices.csv  prices_.csv
CVaR_Dashboard/: conf.py
CVaR_Dashboard/data/processed/: sample_portfolio_values.csv
CVaR_Dashboard/data/raw/: 7_portRs.csv  7_views.csv  F-F_Momentum_Factor_daily.CSV  F-F_Research_Data_5_Factors_2x3_daily.CSV  data_ETFs.csv  data_timeseries.csv  etf_data.csv  sample_portfolio_weights_ETFs.csv
CVaR_Dashboard/docs/: index.rst
CVaR_Dashboard/src/dashboard/: main_App.py
CVaR_Dashboard/src/dashboard/modules/: __init__.py  analysis_module.py  cvar_portfolio.py  model2.py  model3.py  portfolios_module.py  results_module.py
CVaR_Dashboard/src/models/: __init__.py
CVaR_Dashboard/src/portfolios/: portfolio.py
CVaR_Dashboard/src/utils/: get_data.py  get_data_ETFs.py  lint_format.py
CVaR_Dashboard/tests/: conftest.py
CVaR_Dashboard/tests/shiny_tests/: test_dashboard.py
CVaR_Dashboard/tests/unit_tests/: test_generate_data.py  test_get_data.py  test_main_app.py  test_modules.py  test_portfolio.py
CapstoneQWIM_BlackLitterman/dashboard-QWIM/data/processed/: benchmark_portfolio_values.csv  ff5_mom_data.csv
CapstoneQWIM_BlackLitterman/dashboard-QWIM/src/: __init__.py
CapstoneQWIM_BlackLitterman/dashboard-QWIM/src/analysis/: __init__.py
CapstoneQWIM_BlackLitterman/dashboard-QWIM/src/dashboard/: __init__.py
CapstoneQWIM_BlackLitterman/dashboard-QWIM/src/dashboard/modules/: api_reference.rst  black_litterman.py  model4.py
CapstoneQWIM_BlackLitterman/dashboard-QWIM/src/portfolios/: __init__.py
CapstoneQWIM_BlackLitterman/dashboard-QWIM/src/utils/: __init__.py
dashboard-QWIM/: main.py  pyproject.toml  pytest.ini
dashboard-QWIM/data/processed/: 7_portRs.csv  7_views.csv
dashboard-QWIM/data/raw/: data_ETFs.csv
dashboard-QWIM/src/dashboard/: main_App.py
dashboard-QWIM/src/dashboard/modules/: analysis_module.py  black_litterman.py  inputs_module.py  portfolios_module.py
dashboard-QWIM/src/utils/: generate_data.py  get_data_ETFs.py  utils_portfolio.py
hrp_model/: hrp_dashboard.py  hrp_model.py  optimize_hrp.py
