

[project]
name = "dashboard-qwim"
version = "0.1.0"
description = "Dashboard for QWIM project"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "d3blocks>=1.4.11",
    "functime>=0.9.5",
    "great-tables>=0.17.0",
    "kedro>=0.19.11",
    "libsass>=0.23.0",
    "narwhals>=1.30.0",
    "numpy>=2.1.3",
    "pathlib>=1.0.1",
    "playwright>=1.50.0",
    "plotly>=5.24.1",
    "plotnine>=0.14.5",
    "polars>=1.25.2",
    "pyfolio-reloaded>=0.9.8",
    "pyportfolioopt>=1.5.6",
    "pystore>=0.1.24",
    "pytest>=8.3.5",
    "qis>=3.1.3",
    "quantstats>=0.0.64",
    "riskfolio-lib>=7.0.0",
    "ruff>=0.11.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "shiny>=1.3.0",
    "shinyswatch>=0.9.0",
    "shinywidgets>=0.5.1",
    "sphinx>=8.2.3",
    "statsmodels>=0.14.4",
    "yfinance>=0.2.54",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
# Enable flake8-docstrings (D) and Numpy docstring conventions (NPY)
select = ["E", "F", "W", "I", "N", "D", "NPY", "B", "C4", "PT", "UP"]
ignore = [
    "D212",  # Multi-line docstring summary should start at the first line
    "D203",  # 1 blank line required before class docstring
    "E501",  # Line too long (disabled because we'll let formatter handle it)
    "PT006", # pytest-parametrize-names-wrong-type
    "PT007", # pytest-parametrize-values-wrong-type
]

# Same line length as Black
line-length = 100

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Files with these extensions will be checked
include = ["*.py", "*.pyx", "*.ipynb"]

# Target Python 3.11
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"] # Ignore unused imports, import not at top
"tests/*" = ["D", "NPY"] # Ignore docstring violations in tests

[tool.ruff.isort]
known-first-party = ["dashboard"] # Treat these as first-party imports
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.pydocstyle]
convention = "numpy" # Use NumPy-style docstrings

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
string-quotes = "double"

[tool.ruff.format]
# Use single quotes for strings - consistent with the project style
quote-style = "double"
indent-style = "space"
